--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -5,6 +5,12 @@
 <div class="main">
 	<div class="header">
 		<h3>Welcome to My Site</h3>
+
+		{% if session.logged_in %}
+		Welcome back, {{ current_user.username }}!
+		{% else %}
+		<p><a href="{{ url_for('login') }}">Login</a> <a href="{{ url_for('register') }}">Register</a></p>
+		{% endif %}
 	</div>
 	<div class="leftbar">
 		<h3>Links</h3>
