--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -4,13 +4,15 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <div class="main">
 	<div class="header">
-		<h3>Welcome to My Site</h3>
+		<h3 class="header">Welcome to My Site</h3>
 
-		{% if session.logged_in %}
-		Welcome back, {{ current_user.username }}!
-		{% else %}
-		<p><a href="{{ url_for('login') }}">Login</a> <a href="{{ url_for('register') }}">Register</a></p>
-		{% endif %}
+		<div class="login">
+			{% if session.logged_in %}
+			Welcome back, {{ current_user.username }}!
+			{% else %}
+			<a href="{{ url_for('login') }}">Login</a> <a href="{{ url_for('register') }}">Register</a>
+			{% endif %}
+		</div>
 	</div>
 	<div class="leftbar">
 		<h3>Links</h3>
